login and config chart

--- a/src/app/components/appheader/appheader.component.html
+++ b/src/app/components/appheader/appheader.component.html
@@ -80,7 +80,7 @@
                     </a>
               </li>
               <li class="user-body">
-                  <a href="#">
+                  <a href="#" (click)="signOut()"> 
                       <i class="fa fa-sign-out"></i> Sign out
                     </a>
               </li>
