--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,3 @@
-   html, body{
-    background-color: #00a65a!important;
-   }
+   ::ng-deep .skin-green-light{
+    background-color: #00a65a;
+  }
