--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,8 @@
+<!-- <style>
+       .skin-green-light{
+       background-color: #00a65a!important;
+      }
+</style> -->
 <div class="login-box">
   <div class="login-logo">
     <a style="color:#ffff">fix
